objects/Status_Tracking__c.object
<CustomObject>
    <fields>
        <fullName>Agreement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agreement</label>
        <referenceTo>Agreement__c</referenceTo>
        <relationshipLabel>Status Tracking</relationshipLabel>
        <relationshipName>Status_Tracking</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Collateral_Monitoring__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Collateral Monitoring</label>
        <referenceTo>Collateral_Monitoring__c</referenceTo>
        <relationshipLabel>Status Tracking</relationshipLabel>
        <relationshipName>Status_Tracking</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Collateral_Valuation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Collateral Valuation</label>
        <referenceTo>Collateral_Valuation__c</referenceTo>
        <relationshipLabel>Status Tracking</relationshipLabel>
        <relationshipName>Status_Tracking</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Collateral__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Collateral</label>
        <referenceTo>Collateral__c</referenceTo>
        <relationshipLabel>Status Tracking</relationshipLabel>
        <relationshipName>Status_Trackings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Condition_Occurrence__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Condition Occurrence</label>
        <referenceTo>Condition_Occurrence__c</referenceTo>
        <relationshipLabel>Status Tracking</relationshipLabel>
        <relationshipName>Status_Tracking</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Deal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Deal</label>
        <referenceTo>advpm__Matter__c</referenceTo>
        <relationshipLabel>Status Tracking</relationshipLabel>
        <relationshipName>Status_Tracking</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Drawdown__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Drawdown</label>
        <referenceTo>Drawdown__c</referenceTo>
        <relationshipLabel>Status Tracking</relationshipLabel>
        <relationshipName>Status_Tracking</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Duration__c</fullName>
        <label>Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fit_To_Lend_Checklist__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Fit To Lend Checklist</label>
        <referenceTo>Fit_To_Lend_Checklist__c</referenceTo>
        <relationshipLabel>Status Tracking</relationshipLabel>
        <relationshipName>Status_Tracking</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status_From__c</fullName>
        <label>Status From</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_To__c</fullName>
        <label>Status To</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Task__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Task</label>
        <referenceTo>agf__ADM_Task__c</referenceTo>
        <relationshipLabel>Status Tracking</relationshipLabel>
        <relationshipName>Status_Tracking</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Watcher__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Watcher</label>
        <referenceTo>Watcher__c</referenceTo>
        <relationshipLabel>Status Tracking</relationshipLabel>
        <relationshipName>Status_Tracking</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Status Tracking</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Status Tracking No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Status Tracking</pluralLabel>
    <recordTypes>
        <fullName>Agreements</fullName>
        <active>true</active>
        <label>Agreements</label>
    </recordTypes>
    <recordTypes>
        <fullName>Collateral</fullName>
        <active>true</active>
        <label>Collateral</label>
    </recordTypes>
    <recordTypes>
        <fullName>Condition_Occurrences</fullName>
        <active>true</active>
        <label>Condition Occurrences</label>
    </recordTypes>
    <recordTypes>
        <fullName>Deal</fullName>
        <active>true</active>
        <label>Deal</label>
    </recordTypes>
    <recordTypes>
        <fullName>Drawdown_Agency</fullName>
        <active>true</active>
        <label>Drawdown - Agency</label>
    </recordTypes>
    <recordTypes>
        <fullName>Drawdowns</fullName>
        <active>true</active>
        <label>Drawdowns</label>
    </recordTypes>
    <recordTypes>
        <fullName>Fit_to_Lend_Checklick</fullName>
        <active>true</active>
        <label>Fit to Lend Checklist</label>
    </recordTypes>
    <recordTypes>
        <fullName>Tasks</fullName>
        <active>true</active>
        <label>Tasks</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>